...
    }

    @objc func bookmarkButtonPressed() {
        guard let quote = quote else { return }
        delegate?.bookmarkButtonPressed(quote.id!)

        let imageName = isBookmark ? "bookmark" : "bookmark.fill"
        let image = UIImage(systemName: imageName, withConfiguration: UIImage().mainViewSymbolConfig())!
        bookmarkButton.accessibilityIdentifier = imageName
        bookmarkButton.setImage(image, for: .normal)
        isBookmark.toggle()
        quote.like.toggle()
        
...
